# CVE-2022-41343

./: README.md  pyproject.toml
src/cve_2022_41343/: main.py
